--- a/app.json
+++ b/app.json
@@ -13,11 +13,13 @@
     },
     "android": {
       "adaptiveIcon": {
-         "foregroundImage": "./assets/images/logo.png",
+        "foregroundImage": "./assets/images/logo.png",
         "backgroundColor": "#ffffff"
       },
       "edgeToEdgeEnabled": true,
-      "predictiveBackGestureEnabled": false
+      "predictiveBackGestureEnabled": false,
+      "usesCleartextTraffic": true,
+      "permissions": ["INTERNET"]
     },
     "web": {
       "output": "static",
